@@ -27,11 +27,11 @@ from Products.CMFCore.utils import getToolByName
 
 def _convertFileToMimeType(file, mime_type, context=None):
     """Convert a file to a new mime type.
-
+    
     The file argument may be a Zope File object or None.
-
+    
     The context argument is used to find placeful tools.
-
+    
     Returns a string, or None if no conversion is possible.
     """
     if file is None:
@@ -51,19 +51,33 @@ def _convertFileToMimeType(file, mime_type, context=None):
                                  )
     if not data:
         return None
-    return data.getData()
+    return data
+
 
 def convertFileToText(file, context=None):
     """Convert a file to text.
-
+    
     Returns a string, or None if no conversion is possible.
     """
-    return _convertFileToMimeType(file, 'text/plain', context=context)
+    result = _convertFileToMimeType(file, 'text/plain', context=context)
+    if result is not None:
+        result = result.getData()
+    return result
 
 
 def convertFileToHtml(file, context=None):
     """Convert a file to HTML.
-
-    Returns a string, or None if no conversion is possible.
+    
+    Returns a data object (string and subobjects),
+    or None if no conversion is possible.
     """
     return _convertFileToMimeType(file, 'text/html', context=context)
+
+
+def convertFileToDocbook(file, context=None):
+    """Convert a file to Docbook XML.
+    
+    Returns a data object (string and subobjects),
+    or None if no conversion is possible.
+    """
+    return _convertFileToMimeType(file, 'application/docbook+xml', context=context)
