@@ -3,7 +3,9 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- Adding a CPSSubObjectsField and modifying CPSFileField to hold files generated
+  by conversions + modifying FileUtils thus making it possible to have HTML
+  previews with images
 Bug fixes:
 ~~~~~~~~~~
 -
